added word2ves cots

--- a/predictWords.ipynb
+++ b/predictWords.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,14 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package wordnet to /home/mdontas/nltk_data...\n"
+      "[nltk_data] Downloading package wordnet to /home/jay/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
@@ -31,7 +36,7 @@
        "True"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,11 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "for df in pd.read_csv(\"../archive/en-fr.csv\", chunksize= 10 ** 5):\n",
+    "for df in pd.read_csv(\"data/archive/en-fr.csv\", chunksize= 10 ** 5):\n",
     "    sample = df\n",
     "    break"
    ]
@@ -67,12 +74,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "sample['en'] = sample['en'].str.replace(\"[^\\d\\w'-]\", \" \", regex=True).str.strip().str.split(\"\\s+\", regex=True)\n",
     "sample['fr'] = sample['fr'].str.replace(\"[^\\d\\w'-]\", \" \", regex=True).str.strip().str.split(\"\\s+\", regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>en</th>\n",
+       "      <th>fr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[Changing, Lives, Changing, Society, How, It, ...</td>\n",
+       "      <td>[Il, a, transformé, notre, vie, Il, a, transfo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[Site, map]</td>\n",
+       "      <td>[Plan, du, site]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[Feedback]</td>\n",
+       "      <td>[Rétroaction]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[Credits]</td>\n",
+       "      <td>[Crédits]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[Français]</td>\n",
+       "      <td>[English]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>[Karen, Bron, Acting, Director, Innovations, A...</td>\n",
+       "      <td>[Karen, Bron, Directrice, par, intérim, Direct...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>[Previous, Table, of, Contents, Next]</td>\n",
+       "      <td>[Page, précédente, Table, des, matières, Page,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>[Implementation, of, section, 41, of, the, Off...</td>\n",
+       "      <td>[Mise, en, œuvre, de, l'article, 41, de, la, L...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>[To, bring, the, communities, together, and, m...</td>\n",
+       "      <td>[Assurer, un, rapprochement, des, communautés,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>[Continue, to, organize, and, deliver, a, cour...</td>\n",
+       "      <td>[Continuer, d'organiser, et, de, dispenser, un...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      en  \\\n",
+       "0      [Changing, Lives, Changing, Society, How, It, ...   \n",
+       "1                                            [Site, map]   \n",
+       "2                                             [Feedback]   \n",
+       "3                                              [Credits]   \n",
+       "4                                             [Français]   \n",
+       "...                                                  ...   \n",
+       "99995  [Karen, Bron, Acting, Director, Innovations, A...   \n",
+       "99996              [Previous, Table, of, Contents, Next]   \n",
+       "99997  [Implementation, of, section, 41, of, the, Off...   \n",
+       "99998  [To, bring, the, communities, together, and, m...   \n",
+       "99999  [Continue, to, organize, and, deliver, a, cour...   \n",
+       "\n",
+       "                                                      fr  \n",
+       "0      [Il, a, transformé, notre, vie, Il, a, transfo...  \n",
+       "1                                       [Plan, du, site]  \n",
+       "2                                          [Rétroaction]  \n",
+       "3                                              [Crédits]  \n",
+       "4                                              [English]  \n",
+       "...                                                  ...  \n",
+       "99995  [Karen, Bron, Directrice, par, intérim, Direct...  \n",
+       "99996  [Page, précédente, Table, des, matières, Page,...  \n",
+       "99997  [Mise, en, œuvre, de, l'article, 41, de, la, L...  \n",
+       "99998  [Assurer, un, rapprochement, des, communautés,...  \n",
+       "99999  [Continuer, d'organiser, et, de, dispenser, un...  \n",
+       "\n",
+       "[100000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample\n"
    ]
   },
   {
@@ -84,8 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "words = sample['fr'].values[0].copy()\n",
@@ -99,8 +242,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -108,7 +253,7 @@
        "688054"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,8 +416,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -285,7 +432,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -440,9 +587,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
